Updated swagger documents
